--- a/phonebook/package.json
+++ b/phonebook/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
@@ -12,7 +14,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf dist && cd ../Curso-react/phonebook && npm run build && cp -r dist ../Curso-react/phonebook",
+    "deploy:full": "npm run build:ui && npm run deploy"
   },
   "author": "Nico Castañeda",
   "license": "ISC",
