--- a/phonebook/package.json
+++ b/phonebook/package.json
@@ -6,6 +6,10 @@
     "mongoose": "^8.3.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "@stylistic/eslint-plugin-js": "^2.1.0",
+    "eslint": "^9.2.0",
+    "globals": "^15.2.0",
     "nodemon": "^3.1.0"
   },
   "name": "phonebook",
@@ -16,7 +20,9 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../Curso-react/phonebook && npm run build && cp -r dist ../Curso-react/phonebook",
-    "deploy:full": "npm run build:ui && npm run deploy"
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "lint": "eslint ."
+
   },
   "author": "Nico Castañeda",
   "license": "ISC",
